# eighx

./: Cargo.toml  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: g3bsdr6358pz35rzwlwhs2piws3svnwk-source
eighx-app/: Cargo.toml
eighx-app/src/: main.rs
eighx-assets/: Cargo.toml
eighx-bindgen/: Cargo.toml
eighx-cli/: Cargo.toml
eighx-config/: Cargo.toml
eighx-core/: Cargo.toml
eighx-editor/: Cargo.toml
eighx-extensions/: Cargo.toml
eighx-extensions/src/: extensions.rs
eighx-fft/: Cargo.toml
eighx-network/: Cargo.toml
eighx-runtime/: Cargo.toml
eighx-script/: Cargo.toml
eighx-ui/: Cargo.toml
eighx-ui-macros/: Cargo.toml
eighx-ui-macros/src/: lib.rs
eighx-ui/src/: lib.rs  simple.rs  theme.rs  ui.rs  window.rs
eighx-ui/src/state/: mod.rs  theme.rs
eighx-ui/src/widgets/: block.rs  mod.rs  root.rs  toolbar.rs
eighx-ui/ui/: main.slint  theme.slint
eighx-webui/: Cargo.toml
