[workspace]
members = ["eighx-app","eighx-assets", "eighx-bindgen",
	"eighx-cli"
, "eighx-config", "eighx-core", "eighx-editor", "eighx-extensions", "eighx-fft", "eighx-network", "eighx-runtime", "eighx-script", "eighx-ui", "eighx-ui-macros", "eighx-webui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# gpui = "0.2.2"
slint = "1.14"
anyhow = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
